--- a/package.json
+++ b/package.json
@@ -11,16 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-  "angular-cookies": "^1.5.8",
-    "angular-date-time-input": "^1.2.1",
-    "bcrypt": "^1.0.2",
-    "body-parser": "^1.16.0",
+    "angular-cookies": "^1.5.8",
+        "ejs": "^2.5.2",
+
+    "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
-    "ejs": "^2.5.2",
     "express": "^4.14.0",
-    "express-session": "^1.15.0",
-    "mongoose": "^4.7.7",
-    "path": "^0.12.7"
+    "express-session": "^1.14.2",
+    "mongoose": "^4.6.6"
   }
 }
 
